--- a/static/login_styles.css
+++ b/static/login_styles.css
@@ -1,8 +1,7 @@
 body {
-    /* *1 */
-    font-family: Arial, sans-serif;
-    background-color: #2E2E2E;
-    color: #FFFFFF;
+    font-family: Tahoma, sans-serif;
+    background-color: #B794BC;
+    font-size: 14px;
     margin: 0;
     padding: 0;
     display: flex;
@@ -12,43 +11,219 @@ body {
     height: 100vh;
 }
 
+.header {
+    color: #B57FBD;
+}
+
+#text {
+    color: #8A5992;
+}
+
 .container {
     width: 80%;
     max-width: 600px;
-    background-color: #3E3E3E;
+    background-color: #E1DEE2;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
 }
 
 h1 {
-    /* *2 */
-    color: #BB86FC;
+    color: #B794BC;
 }
 
 input[type="text"],
 input[type="password"],
 button {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     margin: 10px 0;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
 }
 
 button {
-    background-color: #BB86FC;
+    background-color: black;
     color: white;
     cursor: pointer;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    width: 20rem;
+    text-align: center;
+    float: inherit;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px; /* Adjust padding as needed */
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    text-decoration: none;
+
+    
+} 
+
+button:hover {
+    background-color: #a576a8;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+button i {
+    margin-left: 8px;
 }
 
 a {
-    /* *3 */
-    color: #BB86FC;
+    color: #8A5992;
     text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .error {
     color: red;
     margin: 10px 0;
+}
+
+.segoe-ui {
+    font-family: 'Tahoma UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+}
+.signin-button{
+            width: 20rem;
+            height: 40px;
+            position: relative;
+            text-align: center;
+            transform:translateX(8.7rem) ;
+            -webkit-transform:translateX(8.7rem) ;
+            -moz-transform:translateX(8.7rem) ;
+            -ms-transform:translateX(8.7rem) ;
+            -o-transform:translateX(8.7rem) ;
+}
+.g_id_signin{
+            width: 20rem;
+            background-color: black;
+            height: 40px;
+            position: relative;
+            text-align: center;
+            transform:translateX(8.7rem) ;
+            -webkit-transform:translateX(8.7rem) ;
+            -moz-transform:translateX(8.7rem) ;
+            -ms-transform:translateX(8.7rem) ;
+            -o-transform:translateX(8.7rem) ;
+            color: #000;
+}
+.bsk-btn bsk-btn-default{
+    padding-bottom: -20px;
+}
+.gsi-material-button {
+  background-color: #131314;
+  background-image: none;
+  border: 1px solid #747775;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #e3e3e3;
+  cursor: pointer;
+  font-family: 'Roboto', arial, sans-serif;
+  font-size: 14px;
+  height: 40px;
+  letter-spacing: 0.25px;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  -webkit-transition: background-color .218s, border-color .218s, box-shadow .218s;
+  transition: background-color .218s, border-color .218s, box-shadow .218s;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 20rem;
+  max-width: 20rem;
+  min-width: min-content;
+  border-color: #8e918f;
+  margin-bottom: -2px;
+}
+
+.gsi-material-button .gsi-material-button-icon {
+  height: 20px;
+  margin-right: 12px;
+  min-width: 20px;
+  width: 20px;
+}
+
+.gsi-material-button .gsi-material-button-content-wrapper {
+  -webkit-align-items: center;
+  align-items: center;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  height: 100%;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+}
+
+.gsi-material-button .gsi-material-button-contents {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+  font-family: 'Roboto', arial, sans-serif;
+  font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: top;
+}
+
+.gsi-material-button .gsi-material-button-state {
+  -webkit-transition: opacity .218s;
+  transition: opacity .218s;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.gsi-material-button:disabled {
+  cursor: default;
+  background-color: #13131461;
+  border-color: #8e918f1f;
+}
+
+.gsi-material-button:disabled .gsi-material-button-state {
+  background-color: #e3e3e31f;
+}
+
+.gsi-material-button:disabled .gsi-material-button-contents {
+  opacity: 38%;
+}
+
+.gsi-material-button:disabled .gsi-material-button-icon {
+  opacity: 38%;
+}
+
+.gsi-material-button:not(:disabled):active .gsi-material-button-state, 
+.gsi-material-button:not(:disabled):focus .gsi-material-button-state {
+  background-color: white;
+  opacity: 12%;
+}
+
+.gsi-material-button:not(:disabled):hover {
+  -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
+}
+
+.gsi-material-button:not(:disabled):hover .gsi-material-button-state {
+  background-color: white;
+  opacity: 8%;
 }
