--- a/static/styles.css
+++ b/static/styles.css
@@ -302,6 +302,8 @@ canvas {
         margin-top: 10px;
         border-radius: 5px;
         border: none;
+        z-index: 10;
+        position: relative;
     }
 
     #responseText {
